fix logo spacing

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -23,6 +23,7 @@ img {
 }
 
 .personal-logo {
+    margin-top: 60px;
     height: 30vh;
     background: #D88163;
 }
@@ -126,10 +127,10 @@ h1 {
     box-shadow: 0 12px 18px -6px black;
 }
 
-.col-md-4 {
+.work-img {
     opacity: .7;
 }
 
-.col-md-4:hover {
+.work-img:hover {
     opacity: 1;
 }
